# speechlab-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py  setup_speechlab_mcp.py
examples/: anthropic_api_example.py  client_example.py  cursor_integration.md  integration_example.py  langchain_agent_example.py
speechlab_mcp/: __init__.py  __main__.py  client.py  model.py  server.py  utils.py
tests/: __init__.py  test_basic.py
